# schemas/v1/openapi.json
@@ -91,7 +91,8 @@
           "supported_domain_ids": {
             "default": [
               "commerce",
-              "insurance"
+              "insurance",
+              "marketing"
             ],
             "items": {
               "type": "string"
@@ -223,7 +224,7 @@
             "type": "array"
           },
           "catalog_version": {
-            "default": "1.1.0",
+            "default": "1.2.0",
             "pattern": "^[0-9]+\\.[0-9]+\\.[0-9]+$",
             "title": "Catalog Version",
             "type": "string"
@@ -915,7 +916,8 @@
               "stub",
               "postgres",
               "supply-chain",
-              "insurance"
+              "insurance",
+              "marketing"
             ],
             "title": "World",
             "type": "string"
@@ -1021,7 +1023,8 @@
               "stub",
               "postgres",
               "supply-chain",
-              "insurance"
+              "insurance",
+              "marketing"
             ],
             "title": "World",
             "type": "string"
